# bootdev-c

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.org
src/: bootlib.c  bootlib.h  munit.h
src/04-2-non-default-values/: main.c
src/04-3-switch-case/: http.h
src/05-2-memory-layout/: main.c
src/05-3-5-4-union-size/: main.c
src/06-1-the-stack/: main.c
src/06-3-stack-overflow/: main.c
src/06-5-the-heap/: exercise.c  main.c
src/06-8-big-endian-little-endian/: main.c
src/07-1-pointer-pointers/: exercise.c
src/07-2-array-of-pointers/: exercise.h  main.c
src/07-3-void-pointers/: exercise.c
src/07-4-swapping-integers/: exercise.c  main.c
src/07-5-swapping-strings/: main.c
src/07-6-generic-swap/: exercise.c
src/08-1-low-level-stack/: main.c  snekstack.h
src/08-2-stack-push/: main.c  snekstack.c  snekstack.h
src/08-3-stack-pop/: snekstack.c
src/08-4-stack-free/: snekstack.h
src/08-5-dangerous-push/: exercise.c  exercise.h  main.c
src/08-6-multiple-types/: exercise.h  main.c
src/09-1-snek-objects/: main.c  snekobject.h
src/09-2-integer/: main.c  snekobject.c  snekobject.h
src/09-3-float/: main.c  snekobject.h
src/09-4-string/: main.c
src/09-5-vector3/: main.c  snekobject.h
src/09-6-arrays/: main.c  snekobject.h
src/09-7-get-and-set/: snekobject.c
src/09-8-length/: main.c
src/10-1-garbage-collector/: main.c
src/10-2-refcounting/: main.c  snekobject.c  snekobject.h
src/10-3-increment/: main.c  snekobject.c  snekobject.h
src/10-4-decrement-and-free/: main.c  snekobject.c  snekobject.h
src/10-5-vectors/: main.c  snekobject.c
src/10-6-arrays/: main.c  snekobject.c
src/10-7-refcounting-review/: main.c
src/11-01-handling-cycles/: main.c  snekobject.c  (+1 more)
(+96 files in other folders)
